# murax-rtthread-nano

./: .gitignore
rt-thread/: CMakeLists.txt
rt-thread/bsp/murax/: linker.ld  rtconfig.h
rt-thread/bsp/murax/applications/: main.c
rt-thread/bsp/murax/drivers/: board.c
rt-thread/bsp/murax/libraries/RISCV/: entry.S  start.S
rt-thread/bsp/murax/libraries/murax/: crt.S  linker.ld  main.c  murax.h
